gwanjung report init

--- a/src/polytech/gwanjung/스케줄링.md
+++ b/src/polytech/gwanjung/스케줄링.md
@@ -2,4 +2,8 @@
 layout: 2360340004_김관중
 ---
 
-#스케줄링
+# 스케줄링_선점형
+
+## 스케줄링이란?
+### 스케줄링은 여러 프로세스가 번갈아가며 사용하는 자원을 어떤 시점에 
+### 어떤 프로세스에게 자원을 할당할 지 결정하는 것이다
