--- a/src/polytech/gwanjung/스케줄링.md
+++ b/src/polytech/gwanjung/스케줄링.md
@@ -1,9 +1,50 @@
 ---
-layout: 2360340004_김관중
+작성자 : 2360340004_김관중
 ---
 
 # 스케줄링_선점형
 
 ## 스케줄링이란?
-### 스케줄링은 여러 프로세스가 번갈아가며 사용하는 자원을 어떤 시점에 
-### 어떤 프로세스에게 자원을 할당할 지 결정하는 것이다
+
+ 스케줄링은 여러 프로세스가 번갈아가며 사용하는 자원을 어떤 시점에 
+ 어떤 프로세스에게 자원을 할당할 지 결정하는 것이다.
+
+ 스케줄링 방법에 따라 프로세서를 할당받을 프로세스를 결정하므로 스케줄링은
+ 시스템의 성능에 직/간접적인 영향을 미친다.
+
+ ## 스케줄링 목적
+  
+  1. 자원 할당의 공정성
+
+  2. 단위시간당 처리량 극대화
+
+  3. 적절한 반환시간 보장
+
+  4. 예측 가능성 보장
+
+  5. 오버헤드 최소화
+
+  6. 자원 사용의 균형 유지
+
+  7. 실행 대기 방지
+
+  8. 우선순위
+
+## 선점형 스케줄링 특징
+
+ 1. 하나의 프로세스가 CPU를 차지하고 있을 때, 우선순위가 높은 다른 프로세서가 현재 프로세스를
+ 중단시키고 CPU를 점유하는 스케줄링 방식이다.
+
+ 2. 비교적 응답이 빠르다는 장점이 있지만, 처리 시간 예측이 힘들고 높은 우선순위 프로세서들이 계속
+ 들어오는 경우 오버헤드를 초래한다.
+
+ 3. 실시간 응답환경 등 우선순위가 높은 프로세서를 빠르게 처리해야 할 때 유용
+ 
+ ## 선점형 스케줄링 종류
+라운드 로빈(RR), SRT, 다단계 큐
+
+### 라운드 로빈(RR)
+ 여러 개의 프로세스가 CPU를 사용하기 위해 경쟁할 때, 각 프로세스에 일정한 시간을 할당하여
+ 순서대로 실행하는 방식이다.
+
+
