--- a/src/polytech/jeongmin/0417.md
+++ b/src/polytech/jeongmin/0417.md
@@ -7,7 +7,7 @@ layout: Process, Thread
 - 프로그램은 컴퓨터에서 실행되기 위해서는 메모리에 적재되어야 하며, 실행 중인 프로그램이 아니더라도 저장 장치에 저장된 파일 자체를 의미한다.
 - 어떤 작업을 위해 실행할 수 있는 파일. 즉, 정적인 개념
 - ex) 웹 브라우저 실행 파일(.exe 등)
-![](../../../../../../Desktop/%EC%8A%A4%ED%81%AC%EB%A6%B0%EC%83%B7%202023-04-17%20%EC%98%A4%ED%9B%84%205.43.11.png)
+![프로세스](../../../../../../Desktop/%EC%8A%A4%ED%81%AC%EB%A6%B0%EC%83%B7%202023-04-17%20%EC%98%A4%ED%9B%84%205.43.11.png)
 ## Process
 - 실행 중인 프로그램으로, 프로그램이 메모리에 적재되어 CPU에 의해 실행되고 있는 상태를 말합니다.
 - 기본적으로 프로세스당 최소 1개의 스레드(메인 스레드)를 가진다
