gwanjung report init

--- a/src/polytech/gwanjung/스케줄링.md
+++ b/src/polytech/gwanjung/스케줄링.md
@@ -2,7 +2,7 @@
 작성자 : 2360340004_김관중
 ---
 
-# 스케줄링_선점형
+# SRT 스케줄링
 
 ## 스케줄링이란?
 
@@ -41,9 +41,10 @@
  3. 실시간 응답환경 등 우선순위가 높은 프로세서를 빠르게 처리해야 할 때 유용
  
  ## 선점형 스케줄링 종류
-라운드 로빈(RR), SRT, 다단계 큐
+ SRT, 라운드 로빈(RR), 다단계 큐
 
-### 라운드 로빈(RR)
+### SRT 스케줄링
+![SRT 스케줄링](https://miro.medium.com/v2/resize:fit:720/0*v3rJfUCzhEl99yoL)
  여러 개의 프로세스가 CPU를 사용하기 위해 경쟁할 때, 각 프로세스에 일정한 시간을 할당하여
  순서대로 실행하는 방식이다.
 
