--- a/src/polytech/jeongmin/0417.md
+++ b/src/polytech/jeongmin/0417.md
@@ -7,13 +7,14 @@ layout: Process, Thread
 - 프로그램은 컴퓨터에서 실행되기 위해서는 메모리에 적재되어야 하며, 실행 중인 프로그램이 아니더라도 저장 장치에 저장된 파일 자체를 의미한다.
 - 어떤 작업을 위해 실행할 수 있는 파일. 즉, 정적인 개념
 - ex) 웹 브라우저 실행 파일(.exe 등)
-![프로세스](https://gmlwjd9405.github.io/images/os-process-and-thread/process.png)
+
 ## Process
 - 실행 중인 프로그램으로, 프로그램이 메모리에 적재되어 CPU에 의해 실행되고 있는 상태를 말합니다.
 - 기본적으로 프로세스당 최소 1개의 스레드(메인 스레드)를 가진다
 - 프로세스는 독립된 메모리 영역 (code, data, stack, heap)을 할당 받는다.
 - 프로그램이 메모리에 올라와 cpu를 할당받고 프로그램이 실행되고 있는 상태. 동적인 개념
 - ex) 웹 브라우저 실행 파일을 메모리에 적재한 상태
+![프로세스](https://gmlwjd9405.github.io/images/os-process-and-thread/process.png)
 
 ## Thread
 - 프로세스 내에서 실행되는 여러 흐름의 단위로, 각각의 쓰레드는 자신만의 실행 흐름을 갖습니다.
@@ -21,21 +22,6 @@ layout: Process, Thread
 - 프로세스 내의 주소 공간이나 자원들(Heap 공간)을 같은 프로세스 내에 스레드끼리 공유하면서 실행
 - ex)  웹 페이지 로딩, 렌더링 등의 작업을 처리하는데 사용되는 작은 실행 단위입니다.
 
+![스레드](https://gmlwjd9405.github.io/images/os-process-and-thread/thread.png)
+
 ### -> 프로세스는 운영체제로부터 자원을 할당받는 작업의 단위이고 스레드는 프로세스가 할당받은 자원을 이용하는 실행의 단위이다.
-
-## Multi Process
-- 멀티프로세스는 여러 개의 독립된 프로세스를 동시에 실행하는 것을 말합니다.
-- 각각의 프로세스는 자신만의 메모리 공간을 갖고, 서로 독립적으로 실행됩니다.
-- 각각의 프로세스는 IPC(Inter-Process Communication)를 이용하여 데이터를 주고받을 수 있습니다.
-- 멀티프로세스는 안정성이 높아서 하나의 프로세스가 비정상적으로 종료되어도 다른 프로세스는 영향을 받지 않습니다.
-- 하지만, 프로세스 간의 통신에는 오버헤드가 발생하여 성능이 떨어질 수 있습니다
-- ex) 동시에 여러 개의 웹 페이지를 띄워서 처리하는 경우, 각각의 웹 페이지를 처리하는 별도의 프로세스를 생성하여 처리합니다.
-
-## Multi Thread
-- 하나의 프로세스 내에서 여러 개의 스레드를 동시에 실행하는 것을 말합니다.
-- 각각의 스레드는 프로세스 내에서 동일한 메모리 공간을 공유합니다.
-- 즉, 스레드 간의 데이터 전달이 빠르고 효율적입니다.
-- 하지만, 하나의 스레드가 문제가 발생하면 전체 프로세스가 영향을 받을 수 있습니다.
-- ex) 하나의 웹 페이지를 처리하는 경우, 여러 개의 스레드를 생성하여 작업을 병렬 처리합니다.
-
-### -> 즉, 웹 브라우저 프로그램은 하나의 프로그램이지만, 동시에 여러 개의 웹 페이지를 처리하는 경우 멀티프로세스로 처리하거나, 하나의 웹 페이지를 처리하는 경우 멀티스레드로 처리할 수 있습니다.
