--- a/src/polytech/gwanjung/스케줄링.md
+++ b/src/polytech/gwanjung/스케줄링.md
@@ -2,7 +2,7 @@
 작성자 : 2360340004_김관중
 ---
 
-# SRT 스케줄링
+# 스케줄링
 
 ## 스케줄링이란?
 
@@ -43,9 +43,13 @@
  ## 선점형 스케줄링 종류
  SRT, 라운드 로빈(RR), 다단계 큐
 
+### RR 스케줄링
+![RR 스케줄링](https://t1.daumcdn.net/cfile/tistory/99BB8E405CC6C6302D)
+##### 라운드 로빈(Round Robin)은 CPU 스케줄링 알고리즘 중 하나로, 여러 개의 프로세스가 CPU를 사용하기 위해 경쟁할 때, 각 프로세스에 일정한 시간을 할당하여 순서대로 실행하는 방식입니다.
+
 ### SRT 스케줄링
 ![SRT 스케줄링](https://miro.medium.com/v2/resize:fit:720/0*v3rJfUCzhEl99yoL)
- 여러 개의 프로세스가 CPU를 사용하기 위해 경쟁할 때, 각 프로세스에 일정한 시간을 할당하여
- 순서대로 실행하는 방식이다.
+ 
+
 
 
