--- a/src/polytech/gwanjung/스케줄링.md
+++ b/src/polytech/gwanjung/스케줄링.md
@@ -30,26 +30,32 @@
 
   8. 우선순위
 
-## 선점형 스케줄링 특징
+## 비선점형 스케줄링 특징
 
- 1. 하나의 프로세스가 CPU를 차지하고 있을 때, 우선순위가 높은 다른 프로세서가 현재 프로세스를
- 중단시키고 CPU를 점유하는 스케줄링 방식이다.
+ 1. 한 프로세스가 CPU를 점유하는 동안, 다른 프로세스가 CPU를 강제로 빼앗지 못하도록 하는 스케줄링 기법
 
- 2. 비교적 응답이 빠르다는 장점이 있지만, 처리 시간 예측이 힘들고 높은 우선순위 프로세서들이 계속
- 들어오는 경우 오버헤드를 초래한다.
-
- 3. 실시간 응답환경 등 우선순위가 높은 프로세서를 빠르게 처리해야 할 때 유용
+ 2. 비선점형 스케줄링에서는 프로세스가 끝날 때까지 CPU를 점유하기 때문에, 실행시간이 긴 프로세스가 CPU를 점유할 경우, 다른 프로세스들은 CPU를 기다리는 동안 대기 상태에 머물러 있게 된다.
  
- ## 선점형 스케줄링 종류
- SRT, 라운드 로빈(RR), 다단계 큐
+ ## 비선점형 스케줄링 종류
+ FCFS, SJF(Shortest Job First), HRN
 
-### RR 스케줄링
-![RR 스케줄링](https://t1.daumcdn.net/cfile/tistory/99BB8E405CC6C6302D)
+### FCFS 스케줄링
+![FCFS 스케줄링_MAIN](https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Thread_pool.svg/400px-Thread_pool.svg.png)
 ##### 라운드 로빈(Round Robin)은 CPU 스케줄링 알고리즘 중 하나로, 여러 개의 프로세스가 CPU를 사용하기 위해 경쟁할 때, 각 프로세스에 일정한 시간을 할당하여 순서대로 실행하는 방식입니다.
+![FCFS 스케줄링_SUB](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fk.kakaocdn.net%2Fdn%2FdufF6d%2FbtqtWhgy7Zl%2FBMv2BKEl9fSAF3GxFKIwjk%2Fimg.png)
 
-### SRT 스케줄링
-![SRT 스케줄링](https://miro.medium.com/v2/resize:fit:720/0*v3rJfUCzhEl99yoL)
+
+### SJF 스케줄링
+![SJT 스케줄링](https://media.vlpt.us/post-images/pa324/7d6a5c80-159e-11ea-934d-7b176b41c2f3/image.png)
  
+ ##### 설명란
+
+ ![SJF 스케줄링](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fk.kakaocdn.net%2Fdn%2FbzYkhC%2FbtqtY8oiA3Q%2F4kZqk2gBuwj0klLXZzVUN0%2Fimg.png)
+
+ ![SJF 스케줄링](https://t1.daumcdn.net/cfile/tistory/999F5B405CC6C63014)
+### HRN 스케줄링
+대기 중인 프로세스 중 현재 Response Ratio가 가장 높은 것을 선택 
+SJF와 Aging 기법을 합쳐 SJF의 약점인 기아 현상을 보완한 기법으로 긴 작업과 짧은 작업 간의 불평등을 완화
 
 
 
