--- a/src/polytech/gwanjung/스케줄링.md
+++ b/src/polytech/gwanjung/스케줄링.md
@@ -41,21 +41,24 @@
 
 ### FCFS 스케줄링
 ![FCFS 스케줄링_MAIN](https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Thread_pool.svg/400px-Thread_pool.svg.png)
-##### 라운드 로빈(Round Robin)은 CPU 스케줄링 알고리즘 중 하나로, 여러 개의 프로세스가 CPU를 사용하기 위해 경쟁할 때, 각 프로세스에 일정한 시간을 할당하여 순서대로 실행하는 방식입니다.
+##### 먼저 도착한 프로세스가 먼저 CPU를 할당받는 방식
+##### 대기시간이 긴 프로세스가 먼저 실행되는 경우에는 시스템의 응답 시간이 길어지는 문제가 있습니다.
 ![FCFS 스케줄링_SUB](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fk.kakaocdn.net%2Fdn%2FdufF6d%2FbtqtWhgy7Zl%2FBMv2BKEl9fSAF3GxFKIwjk%2Fimg.png)
-
 
 ### SJF 스케줄링
 ![SJT 스케줄링](https://media.vlpt.us/post-images/pa324/7d6a5c80-159e-11ea-934d-7b176b41c2f3/image.png)
  
- ##### 설명란
-
+ ##### 실행시간이 가장 짧은 프로세스가 먼저 CPU를 할당받는 방식
+ ##### SJF 방식은 최적의 스케줄링 기법이지만, 프로세스의 실행시간을 정확히 예측하기 어려운 경우에는 비효율적일 수 있습니다.
+ 
  ![SJF 스케줄링](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fk.kakaocdn.net%2Fdn%2FbzYkhC%2FbtqtY8oiA3Q%2F4kZqk2gBuwj0klLXZzVUN0%2Fimg.png)
 
  ![SJF 스케줄링](https://t1.daumcdn.net/cfile/tistory/999F5B405CC6C63014)
 ### HRN 스케줄링
-대기 중인 프로세스 중 현재 Response Ratio가 가장 높은 것을 선택 
-SJF와 Aging 기법을 합쳐 SJF의 약점인 기아 현상을 보완한 기법으로 긴 작업과 짧은 작업 간의 불평등을 완화
-
-
+ ##### 대기 시간과 실행 시간을 모두 고려하여 다음에 실행할 프로세스를 선택하는 방식
+ ##### 대기 중인 프로세스 중 현재 Response Ratio가 가장 높은 것을 선택 
+ ##### SJF와 Aging 기법을 합쳐 SJF의 약점인 기아 현상을 보완한 기법으로 긴 작업과 짧은 작업 간의 불평등을 완화
+ #### 우선순위 = (대기 시간 + 실행 시간) / 실행 시간
+ ##### HRN 방식은 대기 시간과 실행 시간을 모두 고려하여 우선순위를 부여하는 점에서 SJF 방식과 유사하지만, 
+ ##### 실행 시간이 긴 프로세스가 계속해서 CPU를 사용하는 문제를 해결할 수 있는 장점이 있다.
 
