--- a/src/polytech/SeungHee/230417_Kernel.md
+++ b/src/polytech/SeungHee/230417_Kernel.md
@@ -16,6 +16,8 @@
 
 ## 1-1. 개요 및 역사
 
+<img src="images/01.png">
+
 ![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/6916f947-9f42-4a98-86ca-1c997b5d3ed9/Untitled.png)
 
 ![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/884287e3-d31e-4b2f-b705-263b3953fa97/Untitled.png)
