--- a/src/polytech/SeungHee/230417_Kernel.md
+++ b/src/polytech/SeungHee/230417_Kernel.md
@@ -4,9 +4,7 @@
 
 ## 마음가짐
 
-(출처 : [https://medium.com/pocs/리눅스-커널-운영체제-강의노트-1-d36d6c961566](https://medium.com/pocs/%EB%A6%AC%EB%88%85%EC%8A%A4-%EC%BB%A4%EB%84%90-%EC%9A%B4%EC%98%81%EC%B2%B4%EC%A0%9C-%EA%B0%95%EC%9D%98%EB%85%B8%ED%8A%B8-1-d36d6c961566))
-
-[리눅스 커널(운영체제) 강의노트 [1]](https://medium.com/pocs/리눅스-커널-운영체제-강의노트-1-d36d6c961566)
+(출처 : [리눅스 커널(운영체제) 강의노트 [1]](https://medium.com/pocs/리눅스-커널-운영체제-강의노트-1-d36d6c961566))
 
 > **리눅스 커널(Linux Kernel)**을 한 사람이 전부 아는 것은 불가능하다. 커널 관련 두터운 원서를 75 ~ 80권 정도는 읽어야 “아, 한 번씩은 훑어봤다”라고 말할 수 있을 정도다. IBM과 같은 대형회사에서도 리눅스를 다루는 사람만 250명 정도가 있다고 한다. 250명의 사람이 방대한 커널에서 각자 분야를 맡아서 일을 처리한다.
 따라서 “모든 걸 다 알아야지!”라는 마음가짐 보다는 **“커널과 운영체제가 어떤 식으로 동작하는지 개략적으로 이해해보자”**라는 수준의 마음가짐을 가지는 것이 좋겠다.
@@ -17,10 +15,6 @@
 ## 1-1. 개요 및 역사
 
 <img src="images/01.png">
-
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/6916f947-9f42-4a98-86ca-1c997b5d3ed9/Untitled.png)
-
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/884287e3-d31e-4b2f-b705-263b3953fa97/Untitled.png)
 
 ***개요***
 
@@ -58,7 +52,7 @@
 
 ***시스템 콜은 왜 필요할까?***
 
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/91e709a3-9fa6-4ba2-87cc-5779fd18099d/Untitled.png)
+<img src="images/02.png">
 
 우리가 일반적으로 사용하는 프로그램은 '응용프로그램'입니다. 유저레벨의 프로그램은 유저레벨의 함수들 만으로는 많은 기능을 구현하기 힘들기 때문에, `커널(kernel)의 도움을 반드시 받아야 합니다.` 이러한 작업은 응용프로그램으로 대표되는 유저 프로세스(User Process)에서 유저모드에서는 수행할 수 없습니다. 반드시 `커널모드로 전환한 후에야, 해당 작업을 수행할 권한이 생깁니다.` 커널 모드를 통한 이러한 작업은 반드시 시스템 콜을 통해 수행하도록 설계되어 있습니다.
 
@@ -68,13 +62,13 @@
 
 ***예시 : open()의 호출***
 
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/ac1b7ffd-4fb1-47c5-a180-4ca26393b4bb/Untitled.png)
+<img src="images/03.png">
 
 예를 들어, open() 함수를 사용하면 파일을 열고, read() 함수를 사용하면 파일을 읽을 수 있습니다. 이러한 함수 호출은 컴파일러에 의해 해당 함수가 시스템 호출로 번역되어 실행됩니다.
 
 ## 2-2. 커널의 주요 구성 요소 및 역할
 
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/36bac4b9-d04e-42dc-a9e1-1d6c527bc74a/Untitled.png)
+<img src="images/06.png">
 
 이 중에서도 가장 중요한 기능은 `운영 체제(OS)의 핵심 부분으로서 하드웨어와 소프트웨어 간의 인터페이스를 담당`하는 것입니다. 다음은 리눅스 커널이 제공하는 주요 기능들입니다.
 
@@ -97,7 +91,7 @@
 
 ## 3-1. 모놀리식 커널(Monolithic Kernel), 마이크로 커널(MicroKernel)
 
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/538e0302-b3ed-4cfa-a19f-1781dfd13d2a/Untitled.png)
+<img src="images/04.png">
 
 - ***모놀리식 커널***
     - ***정의 :*** 모놀리식 커널은 우리가 `개념적으로 알고 있는 커널로써` 애플리케이션을 제외한 모든 System 서비스들, 예를들면 VFS(Virtual File System), IPC(InterProcess Communication), File System등을 `커널이 직접 처리하는 방식` 입니다. 각 서비스들은 커널 내부의 여러 계층에서 관리됩니다. 모놀리식 커널은 사용자가 운영체제 서비스들을 System Call을 통해 사용할 수 있게 해줍니다.
@@ -113,7 +107,7 @@
 
 ## 3-2 리눅스 커널 모듈
 
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/eed1c7db-4a01-408d-a946-9894dcfe1b6c/Untitled.png)
+<img src="images/05.png">
 
 - ***앞서, 커널 모듈이 없다면?***
     - 우리는 모놀리식 커널(단일 커널)을 만들어야할 것이고 커널 이미지에 직접적으로 새로운 기능을 추가해야 합니다. 즉, 더 큰 커널을 사용하는 것 외에도`우리가 새로운 기능을 커널에 넣고 싶을 때마다 매번 빌드와 리부팅을 반복`하는 번거로운 작업을 해야합니다. 이를 개선시켜 주는 것이 커널 모듈 입니다.
