--- a/src/polytech/gwanjung/스케줄링_0418.md
+++ b/src/polytech/gwanjung/스케줄링_0418.md
@@ -46,13 +46,11 @@
 ![FCFS 스케줄링_SUB](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fk.kakaocdn.net%2Fdn%2FdufF6d%2FbtqtWhgy7Zl%2FBMv2BKEl9fSAF3GxFKIwjk%2Fimg.png)
 
 ### SJF 스케줄링
-![SJT 스케줄링](https://media.vlpt.us/post-images/pa324/7d6a5c80-159e-11ea-934d-7b176b41c2f3/image.png)
+![SJF 스케줄링](https://media.vlpt.us/post-images/pa324/7d6a5c80-159e-11ea-934d-7b176b41c2f3/image.png)
  
  ##### 실행시간이 가장 짧은 프로세스가 먼저 CPU를 할당받는 방식
  ##### SJF 방식은 최적의 스케줄링 기법이지만, 프로세스의 실행시간을 정확히 예측하기 어려운 경우에는 비효율적일 수 있습니다.
  
- ![SJF 스케줄링](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fk.kakaocdn.net%2Fdn%2FbzYkhC%2FbtqtY8oiA3Q%2F4kZqk2gBuwj0klLXZzVUN0%2Fimg.png)
-<<<<<<< HEAD
 
 ### HRN 스케줄링
  ##### 대기 시간과 실행 시간을 모두 고려하여 다음에 실행할 프로세스를 선택하는 방식
