--- a/src/polytech/gwanjung/스케줄링_0418.md
+++ b/src/polytech/gwanjung/스케줄링_0418.md
@@ -1,16 +1,43 @@
 ---
-작성자 : 2360340004_김관중
+layout: home
 ---
 
 # 스케줄링
 
 ## 스케줄링이란?
 
- 스케줄링은 여러 프로세스가 번갈아가며 사용하는 자원을 어떤 시점에 
- 어떤 프로세스에게 자원을 할당할 지 결정하는 것이다.
+ 컴퓨터 분야에서 스케줄링이란 컴퓨터 시스템 자원(CPU등)을 어떤 작업(task)에 할당할지 결정하는 것을 의미한다.
 
  스케줄링 방법에 따라 프로세서를 할당받을 프로세스를 결정하므로 스케줄링은
  시스템의 성능에 직/간접적인 영향을 미친다.
+
+## 스케줄링 성능 척도
+CPU 스케줄링 알고리즘은 여러 종류가 있는데, 각 알고리즘의 성능을 평가하는 기준(Performance measure, 성능 척도)이 있다. 
+
+1. 시스템 입장에서의 성능 척도
+
+ 
+
+ - CPU 이용률 (CPU Utilization) : 전체 시간 중 CPU가 쉬지 않고 일한 시간
+
+ - 처리량 (Throughput) : 단위 시간당 수행 완료한 프로세스의 수
+
+ 
+
+2. 프로그램 입장에서의 성능 척도
+
+ 
+
+ - 소요 시간 (Turnaround Time) : 프로세스가 Ready queue에서 대기한 시간부터 작업을 완료하는데 걸리는 시간
+
+ - 대기 시간 (Waiting Time) : 프로세스가 Ready queue에서 대기한 시간
+
+ - 응답 시간 (Response Time) : 프로세스가 처음으로 CPU를 할당받기까지 걸린 시간
+
+ 
+
+프로그램 입장에선 소요, 대기, 응답 시간이 모두 최소가 될수록 좋고, 시스템 입장에선 CPU 이용률과 처리량이 모두 최대가 될수록 좋다. 
+
 
  ## 스케줄링 목적
   
@@ -30,33 +57,5 @@
 
   8. 우선순위
 
-## 비선점형 스케줄링 특징
 
- 1. 한 프로세스가 CPU를 점유하는 동안, 다른 프로세스가 CPU를 강제로 빼앗지 못하도록 하는 스케줄링 기법
-
- 2. 비선점형 스케줄링에서는 프로세스가 끝날 때까지 CPU를 점유하기 때문에, 실행시간이 긴 프로세스가 CPU를 점유할 경우, 다른 프로세스들은 CPU를 기다리는 동안 대기 상태에 머물러 있게 된다.
- 
- ## 비선점형 스케줄링 종류
- FCFS, SJF(Shortest Job First), HRN
-
-### FCFS 스케줄링
-![FCFS 스케줄링_MAIN](https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Thread_pool.svg/400px-Thread_pool.svg.png)
-##### 먼저 도착한 프로세스가 먼저 CPU를 할당받는 방식
-##### 대기시간이 긴 프로세스가 먼저 실행되는 경우에는 시스템의 응답 시간이 길어지는 문제가 있습니다.
-![FCFS 스케줄링_SUB](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fk.kakaocdn.net%2Fdn%2FdufF6d%2FbtqtWhgy7Zl%2FBMv2BKEl9fSAF3GxFKIwjk%2Fimg.png)
-
-### SJF 스케줄링
-![SJF 스케줄링](https://media.vlpt.us/post-images/pa324/7d6a5c80-159e-11ea-934d-7b176b41c2f3/image.png)
- 
- ##### 실행시간이 가장 짧은 프로세스가 먼저 CPU를 할당받는 방식
- ##### SJF 방식은 최적의 스케줄링 기법이지만, 프로세스의 실행시간을 정확히 예측하기 어려운 경우에는 비효율적일 수 있습니다.
- 
-
-### HRN 스케줄링
- ##### 대기 시간과 실행 시간을 모두 고려하여 다음에 실행할 프로세스를 선택하는 방식
- ##### 대기 중인 프로세스 중 현재 Response Ratio가 가장 높은 것을 선택 
- ##### SJF와 Aging 기법을 합쳐 SJF의 약점인 기아 현상을 보완한 기법으로 긴 작업과 짧은 작업 간의 불평등을 완화
- #### 우선순위 = (대기 시간 + 실행 시간) / 실행 시간
- ##### HRN 방식은 대기 시간과 실행 시간을 모두 고려하여 우선순위를 부여하는 점에서 SJF 방식과 유사하지만, 
- ##### 실행 시간이 긴 프로세스가 계속해서 CPU를 사용하는 문제를 해결할 수 있는 장점이 있다.
 
