--- a/src/polytech/gwanjung/스케줄링_0418.md
+++ b/src/polytech/gwanjung/스케줄링_0418.md
@@ -8,8 +8,16 @@ layout: home
 
  컴퓨터 분야에서 스케줄링이란 컴퓨터 시스템 자원(CPU등)을 어떤 작업(task)에 할당할지 결정하는 것을 의미한다.
 
- 스케줄링 방법에 따라 프로세서를 할당받을 프로세스를 결정하므로 스케줄링은
- 시스템의 성능에 직/간접적인 영향을 미친다.
+ 스케줄링 방법에 따라 프로세서를 할당받을 프로세스를 결정하므로 스케줄링은 시스템의 성능에 직/간접적인 영향을 미친다.
+ 
+## 프로세스의 생명주기
+
+![프로세스의 생명주기](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2F5onIm%2Fbtrq6OsraK0%2FGFwEotpcHujr59CHEiNeGk%2Fimg.jpg)
+
+프로세스(Process)가 구동하려면 다양한 시스템 자원이 필요하다. 대표적으로 CPU(중앙처리장치)와 입출력장치가 있는데, 최고의 성능을 내기 위해 자원을 어떤 프로세스에 얼마나 할당하는지 정책을 만드는 것을 CPU스케줄링이라고 한다.
+
+ 프로세스는 작업(Job)을 완료할 때까지 다양한 상태가 되는데, 우리가 주목해야할 것은 'Waiting'이다. 
+ 프로세스가 CPU를 점유하여 작업을 수행하는 도중 I/O 또는 Interrupt가 발생하면 일시적으로 프로세스는 CPU를 사용하지 않게 된다. 하지만 계속 점유하고 있다. 이러한 상황을 줄여, CPU를 최대한 활용하면 시스템의 성능 개선을 꾀할 수 있다. 결국, "어떻게 프로세스들이 CPU를 효율적으로 사용하게 할 것인가?" 라는 고민에서 CPU 스케줄링이 출발했다.
 
 ## 스케줄링 성능 척도
 CPU 스케줄링 알고리즘은 여러 종류가 있는데, 각 알고리즘의 성능을 평가하는 기준(Performance measure, 성능 척도)이 있다. 
@@ -56,6 +64,9 @@ CPU 스케줄링 알고리즘은 여러 종류가 있는데, 각 알고리즘의
   7. 실행 대기 방지
 
   8. 우선순위
+
+ 
+
 
 
 
