--- a/src/polytech/gwanjung/스케줄링_0418.md
+++ b/src/polytech/gwanjung/스케줄링_0418.md
@@ -1,72 +1,76 @@
 ---
 layout: home
 ---
+# 스케줄링의 종류
+### 비선점형, 선점형
 
-# 스케줄링
+## 비선점형 스케줄링 특징
 
-## 스케줄링이란?
+ 1. 한 프로세스가 CPU를 점유하는 동안, 다른 프로세스가 CPU를 강제로 빼앗지 못하도록 하는 스케줄링 기법
 
- 컴퓨터 분야에서 스케줄링이란 컴퓨터 시스템 자원(CPU등)을 어떤 작업(task)에 할당할지 결정하는 것을 의미한다.
-
- 스케줄링 방법에 따라 프로세서를 할당받을 프로세스를 결정하므로 스케줄링은 시스템의 성능에 직/간접적인 영향을 미친다.
+ 2. 비선점형 스케줄링에서는 프로세스가 끝날 때까지 CPU를 점유하기 때문에, 실행시간이 긴 프로세스가 CPU를 점유할 경우, 다른 프로세스들은 CPU를 기다리는 동안 대기 상태에 머물러 있게 된다.
  
-## 프로세스의 생명주기
+ ## 비선점형 스케줄링 종류
+ FCFS, SJF(Shortest Job First), HRN
 
-![프로세스의 생명주기](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2F5onIm%2Fbtrq6OsraK0%2FGFwEotpcHujr59CHEiNeGk%2Fimg.jpg)
+### FCFS 스케줄링
+![FCFS 스케줄링_MAIN](https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Thread_pool.svg/400px-Thread_pool.svg.png)
+##### 먼저 도착한 프로세스가 먼저 CPU를 할당받는 방식
+##### 대기시간이 긴 프로세스가 먼저 실행되는 경우에는 시스템의 응답 시간이 길어지는 문제가 있습니다.
+![FCFS 스케줄링_SUB](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fk.kakaocdn.net%2Fdn%2FdufF6d%2FbtqtWhgy7Zl%2FBMv2BKEl9fSAF3GxFKIwjk%2Fimg.png)
 
-프로세스(Process)가 구동하려면 다양한 시스템 자원이 필요하다. 대표적으로 CPU(중앙처리장치)와 입출력장치가 있는데, 최고의 성능을 내기 위해 자원을 어떤 프로세스에 얼마나 할당하는지 정책을 만드는 것을 CPU스케줄링이라고 한다.
-
- 프로세스는 작업(Job)을 완료할 때까지 다양한 상태가 되는데, 우리가 주목해야할 것은 'Waiting'이다. 
- 프로세스가 CPU를 점유하여 작업을 수행하는 도중 I/O 또는 Interrupt가 발생하면 일시적으로 프로세스는 CPU를 사용하지 않게 된다. 하지만 계속 점유하고 있다. 이러한 상황을 줄여, CPU를 최대한 활용하면 시스템의 성능 개선을 꾀할 수 있다. 결국, "어떻게 프로세스들이 CPU를 효율적으로 사용하게 할 것인가?" 라는 고민에서 CPU 스케줄링이 출발했다.
-
-## 스케줄링 성능 척도
-CPU 스케줄링 알고리즘은 여러 종류가 있는데, 각 알고리즘의 성능을 평가하는 기준(Performance measure, 성능 척도)이 있다. 
-
-1. 시스템 입장에서의 성능 척도
-
+### SJF 스케줄링
+![SJF 스케줄링](https://media.vlpt.us/post-images/pa324/7d6a5c80-159e-11ea-934d-7b176b41c2f3/image.png)
  
-
- - CPU 이용률 (CPU Utilization) : 전체 시간 중 CPU가 쉬지 않고 일한 시간
-
- - 처리량 (Throughput) : 단위 시간당 수행 완료한 프로세스의 수
-
+ ##### 실행시간이 가장 짧은 프로세스가 먼저 CPU를 할당받는 방식
+ ##### SJF 방식은 최적의 스케줄링 기법이지만, 프로세스의 실행시간을 정확히 예측하기 어려운 경우에는 비효율적일 수 있습니다.
  
 
-2. 프로그램 입장에서의 성능 척도
+### HRN 스케줄링
+ ##### 대기 시간과 실행 시간을 모두 고려하여 다음에 실행할 프로세스를 선택하는 방식
+ ##### 대기 중인 프로세스 중 현재 Response Ratio가 가장 높은 것을 선택 
+ ##### SJF와 Aging 기법을 합쳐 SJF의 약점인 기아 현상을 보완한 기법으로 긴 작업과 짧은 작업 간의 불평등을 완화
+ #### 우선순위 = (대기 시간 + 실행 시간) / 실행 시간
+ ##### HRN 방식은 대기 시간과 실행 시간을 모두 고려하여 우선순위를 부여하는 점에서 SJF 방식과 유사하지만, 
+ ##### 실행 시간이 긴 프로세스가 계속해서 CPU를 사용하는 문제를 해결할 수 있는 장점이 있다.
 
- 
+# 스케줄링_선점형
 
- - 소요 시간 (Turnaround Time) : 프로세스가 Ready queue에서 대기한 시간부터 작업을 완료하는데 걸리는 시간
+## 선점형 스케줄링이란?
+하나의 프로세스가 CPU를 차지하고 있을 때, 우선순위가 높은 다른 프로세스가 현재 프로세스를 중단시키고 CPU를 점유하는 스케줄링 방식
+비교적 응답이 빠르다는 장점이 있지만, 처리 시간을 예측하기 힘들고 높은 우선순위 프로세스들이 계속 들어오는 경우 오버헤드를 초래
+실시간 응답환경, Deadline 응답환경 등 우선순위가 높은 프로세스를 빠르게 처리해야 할 경우 등에 유용
 
- - 대기 시간 (Waiting Time) : 프로세스가 Ready queue에서 대기한 시간
+## 선전형 스케줄링 종류
+##### RR, SRT, 다단계 큐
 
- - 응답 시간 (Response Time) : 프로세스가 처음으로 CPU를 할당받기까지 걸린 시간
+### RR
 
- 
+![라운드로빈](https://media.vlpt.us/post-images/pa324/aa46f8b0-15a0-11ea-8ab8-dbe6ee364b43/image.png)
 
-프로그램 입장에선 소요, 대기, 응답 시간이 모두 최소가 될수록 좋고, 시스템 입장에선 CPU 이용률과 처리량이 모두 최대가 될수록 좋다. 
+![라운드로빈](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fk.kakaocdn.net%2Fdn%2FbwsAyu%2FbtqtYKVKWZO%2Fzr8z1dwh0dcHjioiwhUMIK%2Fimg.png)
 
+- 비선점 기법인 FIFO(FCFS)를 선점형 기법으로 변환한 스케줄링 기법이다.
 
- ## 스케줄링 목적
-  
-  1. 자원 할당의 공정성
+- FIFO와 같이 먼저 들어온 프로세스가 먼저 CPU를 할당받게 되지만, 각 프로세스들은 할당된 시간만큼만 CPU를 사용할 수 있게 된다. 만약, 해당 시간내로 완료하지 못했다면, 대기 상태의 가장 마지막으로 들어가게 된다.
 
-  2. 단위시간당 처리량 극대화
+- 시분할 시스템을 위해서 고안된 기법이다.
 
-  3. 적절한 반환시간 보장
+- CPU 사용시간이 랜덤한 프로세스들이 섞여 있을 때 효율적인 기법이다.
 
-  4. 예측 가능성 보장
+- 응답시간이 매우 최적화 되어있는 공정한 스케쥴링 기법이다.
 
-  5. 오버헤드 최소화
+### SRT
 
-  6. 자원 사용의 균형 유지
+![SRT](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fk.kakaocdn.net%2Fdn%2FceeNYb%2FbtqtYLAlP1i%2FJ1q8Bp7y8qorIE4d7yttQk%2Fimg.png)
 
-  7. 실행 대기 방지
+- 비선점 기법인 SJF 스케쥴링 기법을 선점형 기법으로 변환한 스케줄링 기법이다.
 
-  8. 우선순위
+- 현재 실행준인 프로세스의 남은 시간과 준비상태 대기열에 새로 도착한 프로세스의 실행시간을 비교하여 가장 짧은 실행 시간을 요구하는 프로세스에게 CPU를 할당하는 기법이다.
 
- 
+### 다단계 큐
 
+![다단계 큐](https://media.vlpt.us/post-images/pa324/fc18cb30-15a2-11ea-934d-7b176b41c2f3/image.png)
 
-
-
+작업들을 여러 종류 그룹으로 분할, 여러 개의 큐를 이용하여 상위 단계 작업이 선점
+각 큐는 자신만의 독자적인 스케줄링을 가짐
