리눅스기본명령어

--- a/src/polytech/gwanjung/스케줄링_0418.md
+++ b/src/polytech/gwanjung/스케줄링_0418.md
@@ -2,6 +2,7 @@
 layout: home
 ---
 # 스케줄링의 종류
+
 ### 비선점형, 선점형
 
 ## 비선점형 스케줄링 특징
@@ -37,11 +38,12 @@ layout: home
 # 스케줄링_선점형
 
 ## 선점형 스케줄링이란?
+
 하나의 프로세스가 CPU를 차지하고 있을 때, 우선순위가 높은 다른 프로세스가 현재 프로세스를 중단시키고 CPU를 점유하는 스케줄링 방식
 비교적 응답이 빠르다는 장점이 있지만, 처리 시간을 예측하기 힘들고 높은 우선순위 프로세스들이 계속 들어오는 경우 오버헤드를 초래
 실시간 응답환경, Deadline 응답환경 등 우선순위가 높은 프로세스를 빠르게 처리해야 할 경우 등에 유용
 
-## 선전형 스케줄링 종류
+## 선점형 스케줄링 종류
 ##### RR, SRT, 다단계 큐
 
 ### RR
