--- a/src/polytech/gwanjung/리눅스기본명령어_0419.md
+++ b/src/polytech/gwanjung/리눅스기본명령어_0419.md
@@ -9,38 +9,37 @@ layout: home
 
 자주 사용하는 명령어와 옵션 위주로 정리
 
-##### pwd(print working directory)
+### pwd(print working directory)
 
 현재 작업중인 디렉토리 정보 출력
 
- $ pwd
- /home/itholic
+#### $ pwd
+#### /home/itholic
 
-##### ls
+### ls
 현재 디렉토리에 있는 폴더와 파일을 확인하는 명령어
 
-ls
-옵션
--l 옵션: 폴더, 파일들의 정보를 자세히 출력한다.
--d 옵션: 디렉토리를 검색하는 옵션
+#### ls 옵션
+##### -l 옵션: 폴더, 파일들의 정보를 자세히 출력한다.
+##### -d 옵션: 디렉토리를 검색하는 옵션
 
 
-##### cp(copy)
+### cp(copy)
 
 파일 혹은 디렉토리를 복사
 디렉토리를 복사할때는 -r 옵션을 주어야 한다.
- $ ls
- testdir/  testfile
+#### $ ls
+#### testdir/  testfile
 
 
- $ cp testfile1 testfile_cp
- $ ls
- testdir/  testfile  testfile_cp
+#### $ cp testfile1 testfile_cp
+#### $ ls
+#### testdir/  testfile  testfile_cp
 
 
- $ cp -r testdir testdir_cp
- $ ls
- testdir/  testdir_cp/  testfile  testfile_cp
+#### $ cp -r testdir testdir_cp
+#### $ ls
+#### testdir/  testdir_cp/  testfile  testfile_cp
 
 
 ##### mv(move)
@@ -50,55 +49,51 @@ ls
 
 cp와는 달리 디렉토리를 이동할때도 별다른 옵션이 필요 없다.
 
-$ ls
-testdir/  testfile
+#### $ ls
+#### testdir/  testfile
 
 
-$ mv testfile testfile_mv
-$ ls
-testdir/  testfile_mv
+#### $ mv testfile testfile_mv
+#### $ ls
+#### testdir/  testfile_mv
 
+#### $ mv testfile_mv testdir/
+#### $ ls
+#### testdir/
 
-$ mv testfile_mv testdir/
-$ ls
-testdir/
-
-
-$ ls testdir/
-testfile
-
-##### mkdir (make directory)
+#### $ ls testdir/
+#### testfile
+### mkdir (make directory)
 디렉토리 생성
 
 -p 옵션을 주면 하위 디렉토리까지 한 번에 생성 가능
 
 mkdir -p 옵션 예제에서 실제로 하위디렉토리가 생성되었다는 것을 보여주기 위해 사용하였다.
 
- $ ls
- testfile
+#### $ ls
+#### testfile
 
+#### $ mkdir testdir
+#### $ ls
+#### testdir/  testfile
 
- $ mkdir testdir
- $ ls
- testdir/  testfile
+#### $ mkdir -p a/b/c/d/e/
+#### $ ls -R a/
+#### a/:
+#### b/
 
- $ mkdir -p a/b/c/d/e/
- $ ls -R a/
- a/:
- b/
+#### a/b:
+#### c/
 
- a/b:
- c/
+#### a/b/c:
+#### d/
 
- a/b/c:
- d/
+#### a/b/c/d:
+#### e/
 
- a/b/c/d:
- e/
+#### a/b/c/d/e:
 
- a/b/c/d/e:
-
-##### cat (concatenate)
+### cat (concatenate)
  cat 명령은 활용 방법이 꽤나 다양하다.
 
  단순히 파일의 내용을 출력할 수도 있고,
@@ -109,47 +104,41 @@ mkdir -p 옵션 예제에서 실제로 하위디렉토리가 생성되었다는 
 
  새로운 파일을 만들때에도 사용된다.
 
- $ ls
- file1  file2  file3
+#### $ ls
+#### file1  file2  file3
+
+#### $ cat file1
+#### 1
+
+#### $ cat file2
+#### 2
+#### $ cat file3
+#### 3
 
 
- $ cat file1
- 1
+#### $ cat file1 file2 > file1_2
+#### $ ls
+#### file1  file1_2  file2  file3
+#### $ cat file1_2
+#### 1
+#### 2
 
 
- $ cat file2
- 2
+#### $ cat file1 >> file2
+#### $ cat file2
+#### 2
+#### 1
 
 
- $ cat file3
- 3
-
-
- $ cat file1 file2 > file1_2
- $ ls
- file1  file1_2  file2  file3
-
-
- $ cat file1_2
- 1
- 2
-
-
- $ cat file1 >> file2
- $ cat file2
- 2
- 1
-
-
- $ cat > file4
- hello
- world
+#### $ cat > file4
+#### hello
+#### world
  (작성이 끝나면 ctrl +d 로 파일 저장)
 
 
- $ cat file4
- hello
- world
+#### $ cat file4
+#### hello
+#### world
 
 ##### rm
 파일이나 디렉토리를 삭제하는 명령어이다.
@@ -158,12 +147,12 @@ mkdir -p 옵션 예제에서 실제로 하위디렉토리가 생성되었다는 
 
 예제:
 
-cd
-touch bbb.txt
-ls
+#### cd
+#### touch bbb.txt
+#### ls
 
-rm bbb.txt
-ls
+#### rm bbb.txt
+#### ls
 
 -r 옵션: 현재 디렉토리 밑에 있는 모든 파일과 디렉토리를 삭제한다.
 -f 옵션: 삭제 여부를 물어보지 않고 삭제한다.
@@ -178,7 +167,7 @@ ls
 
 명령어 > 파일
 
-cat emp.txt >> emp2.txt
+#### cat emp.txt >> emp2.txt
 
 
 ##### head
@@ -187,4 +176,4 @@ cat emp.txt >> emp2.txt
 head 출력줄수 파일명
 예시
 
-head -20 jobs.txt
+#### head -20 jobs.txt
