--- a/src/polytech/suyoung/0418git.md
+++ b/src/polytech/suyoung/0418git.md
@@ -1,6 +1,8 @@
 ---
 layout : home
 ---
+# 폴리텍 광명융합원 정수영
+
 # GIT & GITHUB 0418 발표
 
 # GIT
@@ -316,3 +318,5 @@ parent를 클릭하면 이 커밋 이전의 커밋을 볼 수 있음
 # 머지 MERGE
 
 # 브랜치
+# 2023-04-18 : [깃]
+# 2023-04-17 : [깃 add]
