리눅스기본명령어

--- a/src/polytech/gwanjung/리눅스기본명령어_0419.md
+++ b/src/polytech/gwanjung/리눅스기본명령어_0419.md
@@ -9,6 +9,102 @@ layout: home
 
 자주 사용하는 명령어와 옵션 위주로 정리
 
+### 필수 명령어들 요약
+1. ls - 현재 위치의 파일 목록 조회
+2. cd - 디렉터리 이동
+3. touch - 0바이트 파일 생성, 파일의 날짜와 시간을 수정
+4. mkdir - 디렉터리 생성
+5. cp - 파일 복사
+6. mv - 파일 이동
+7. rm - 파일 삭제
+8. cat - 파일의 내용을 화면에 출력, 리다이렉션 기호('>')를 사용하여 새로운 파일 생성
+9. redirection - 화면의 출력 결과를 파일로 저장
+10. alias - 자주 사용하는 명령어들을 별명으로 정의하여 쉽게 사용할 수 있도록 설정
+
+### 명령어 옵션
+1. ls (List segments) : 현재 위치의 파일 목록 조회
+ls -l : 파일의 상세정보
+ls -a : 숨김 파일 표시
+ls -t : 파일들을 생성시간순(제일 최신 것부터)으로 표시
+ls -rt : 파일들을 생성시간순(제일 오래된 것부터)으로 표시
+ls -f : 파일 표시 시 마지막 유형에 나타내는 파일명을 끝에 표시
+('/' : 디렉터리, '*' : 실행파일, '@' : 링크 등등,,,)
+ 
+
+2. cd (Change directory) :디렉터리 이동
+cd [디렉터리 경로] : 이동하려는 디렉터리로 이동 (경로 입력 시 '[', ']'부분은 빼고 입력!)
+cd ~ : 홈 디렉터리로 이동
+cd / : 최상위 디렉터리로 이동
+cd . : 현재 디렉터리 
+cd .. : 상위 디렉터리로 이동
+cd - : 이전 경로로 이동
+ 
+
+3. touch : 0바이트 파일 생성, 파일의 날짜와 시간을 수정
+touch filename : filename의 파일을 생성
+touch -c filename : filename의 시간을 현재시간으로 갱신
+touch -t 202110291608 filename : filename의 시간을 날짜 정보(YYYYMMDDhhmm)로 갱신
+(20211029160 => 2021.10.29.16:08)
+touch -r oldfile newfile  : newfile의 날짜 정보를 oldfile의 날짜 정보와 동일하게 변경
+ 
+
+4. mkdir (Make dirctory) : 디렉터리 생성
+mkdir dirname : dirname이라는 디렉터리 생성
+mkdir dir1 dir2: 한 번에 여러 개의 디렉터리 생성
+mkdir -p dirname/sub_dirname : dirname이라는 디렉터리 생성, sub_dirname이라는 하위 디렉터리도 생성
+mkdir -m 700 dirname : 특정 퍼미션(권한)을 갖는 디렉터리 생성
+
+5. cp (Copy) : 파일 복사
+cp file1 file2 : file1을 file2라는 이름으로 복사
+cp -f file1 file2 : 강제 복사(file2라는 파일이 이미 있을 경우 강제로 기존 file2를 지우고 복사 진행)
+cp -r dir1 dir2 : 디렉터리 복사. 폴더 안의 모든 하위 경로와 파일들을 복사
+ 
+
+6. mv (Move) : 파일 이동
+mv file1 file2 : file1 파일을 file2 파일로 변경
+mv file1 /dir : file1 파일을 dir 디렉터리로 이동
+mv file1 file2 /dir : 여러 개의 파일을 dir 디렉터리로 이동
+mv /dir1 /dir2 : dir1 디렉터리를 dir2 디렉터리로 이름 변경
+ 
+
+7. rm (Remove) : 파일 삭제
+rm file1 : file1을 삭제
+rm -f file1 : file1을 강제 삭제
+rm -r dir : dir 디렉터리 삭제 (디렉터리는 -r 옵션 없이 삭제 불가)
+ 
+
+8. cat (Catenate) : 파일의 내용을 화면에 출력, 리다이렉션 기호('>')를 사용하여 새로운 파일 생성
+cat file1 : file1의 내용을 출력
+cat file1 file2 : file1과 file2의 내용을 출력
+cat file1 file2 | more : file1과 file2의 내용을 페이지별로 출력
+cat file1 file2 | head : file1과 file2의 내용을 처음부터 10번째 줄까지만 출력
+cat file1 file2 | tail : file1과 file2의 내용을 끝에서부터 10번째 줄까지만 출력
+ 
+
+9. redirection ('>', '>>') : 화면의 출력 결과를 파일로 저장
+'>' 기호 : 기존에 있는 파일 내용을 지우고 저장
+'>>' 기호 : 기존 파일 내용 뒤에 덧붙여서 저장
+'<' 기호 : 파일의 데이터를 명령에 입력
+
+cat file1 firle2 > file3 : file1, file2의 명령 결과를 합쳐서 file3라는 파일에 저장
+car file4 >> file3 : file3에 file4의 내용 추가
+cat < file1 : file1의 결과 출력
+cat < file1 > file2 : file1의 출력 결과를 file2에 저장
+ 
+
+10. alias : 자주 사용하는 명령어들을 별명으로 정의하여 쉽게 사용할 수 있도록 설정
+
+
+alias 별명 = '명령어 정의'
+
+ex. alias lsa = 'ls -a' : lsa를 실행하면 -a 옵션을 갖는 ls를 실행합니다.
+
+
+unalias lsa
+
+ex. unalias lsa
+--> lsa라는 alias를 해체한다. 
+
 ### pwd(print working directory)
 
 현재 작업중인 디렉토리 정보 출력
@@ -16,189 +112,3 @@ layout: home
 ex. 
   pwd
   /home/itholic
-
-### whoami
-접속한 사용자가 누구인지 확인하는 명령어
-
-whoami
-
-### whatis
-명령어의 간단한 설명을 확인할 수 있다.
-ex. whais mkdir
-
-
-### cd
-Change Directory 명령어로 디렉토리를 이동하는 명령어
-
-ex. cd 경로
-
-상대경로, 절대경로로 지정가능.
-
-#### 상대경로
-: 위치를 내 현재 위치의 상대적인 경로로 이동
-
-#### 절대경로
-: cd 내가 가고자하는 위치 경로
-
-
-### ls
-현재 디렉토리에 있는 폴더와 파일을 확인하는 명령어
-
-#### ls 옵션
-##### -l 옵션: 폴더, 파일들의 정보를 자세히 출력한다.
-##### -d 옵션: 디렉토리를 검색하는 옵션
-
-
-### cp(copy)
-
-파일 혹은 디렉토리를 복사
-디렉토리를 복사할때는 -r 옵션을 주어야 한다.
-#### $ ls
-#### testdir/  testfile
-
-
-#### $ cp testfile1 testfile_cp
-#### $ ls
-#### testdir/  testfile  testfile_cp
-
-
-#### $ cp -r testdir testdir_cp
-#### $ ls
-#### testdir/  testdir_cp/  testfile  testfile_cp
-
-
-##### mv(move)
-파일 혹은 디렉토리 이동
-
-실제로 원하는 위치로 이동할때도 사용하지만, 이름을 변경하는 용도로도 사용한다.
-
-cp와는 달리 디렉토리를 이동할때도 별다른 옵션이 필요 없다.
-
-#### $ ls
-#### testdir/  testfile
-
-
-#### $ mv testfile testfile_mv
-#### $ ls
-#### testdir/  testfile_mv
-
-#### $ mv testfile_mv testdir/
-#### $ ls
-#### testdir/
-
-#### $ ls testdir/
-#### testfile
-### mkdir (make directory)
-디렉토리 생성
-
--p 옵션을 주면 하위 디렉토리까지 한 번에 생성 가능
-
-mkdir -p 옵션 예제에서 실제로 하위디렉토리가 생성되었다는 ㅎ것을 보여주기 위해 사용하였다.
-
-#### $ ls
-#### testfile
-
-#### $ mkdir testdir
-#### $ ls
-#### testdir/  testfile
-
-#### $ mkdir -p a/b/c/d/e/
-#### $ ls -R a/
-#### a/:
-#### b/
-
-#### a/b:
-#### c/
-
-#### a/b/c:
-#### d/
-
-#### a/b/c/d:
-#### e/
-
-#### a/b/c/d/e:
-
-### cat (concatenate)
-
- cat 명령은 활용 방법이 꽤나 다양하다.
-
- 단순히 파일의 내용을 출력할 수도 있고,
-
- 파일 여러개를 합쳐서 하나의 파일로 만들 수도 있다.
-
- 그리고 기존 한 파일의 내용을 다른 파일에 덧붙일수도 있다.
-
- 새로운 파일을 만들때에도 사용된다.
-
-#### $ ls
-#### file1  file2  file3
-
-#### $ cat file1
-#### 1
-
-#### $ cat file2
-#### 2
-#### $ cat file3
-#### 3
-
-
-#### $ cat file1 file2 > file1_2
-#### $ ls
-#### file1  file1_2  file2  file3
-#### $ cat file1_2
-#### 1
-#### 2
-
-
-#### $ cat file1 >> file2
-#### $ cat file2
-#### 2
-#### 1
-
-
-#### $ cat > file4
-#### hello
-#### world
- (작성이 끝나면 ctrl +d 로 파일 저장)
-
-
-#### $ cat file4
-#### hello
-#### world
-
-### rm
-파일이나 디렉토리를 삭제하는 명령어이다.
-
-리눅스나 유닉스는 윈도우와 같이 휴지통이 있지만 명령어로 삭제할 때는 파일이 바로 삭제되기 때문에 조심하자.
-예제:
-
-#### cd
-#### touch bbb.txt
-#### ls
-
-#### rm bbb.txt
-#### ls
-
--r 옵션: 현재 디렉토리 밑에 있는 모든 파일과 디렉토리를 삭제한다.
--f 옵션: 삭제 여부를 물어보지 않고 삭제한다.
-
--rf 옵션: 현재 디렉토리 밑에 있는 파일과 디렉토리를 삭제 여부를 뭍지 않고 삭제한다.
-
-##### redirection
-화면에 출력되는 결과를 파일로 저장하는 명령어이다.
-
-명령어 >> 파일
-기존에 같은 파일의 이름이 없으면 파일을 생성하고 있으면 기존 파일 뒤에 덧붙인다.
-
-명령어 > 파일
-
-#### cat emp.txt >> emp2.txt
-
-
-### head
-문서의 상위 몇 줄을 출력하는 명령어이다.
-
-head 출력줄수 파일명
-예시
-
-#### head -20 jobs.txt
