--- a/src/polytech/gwanjung/시스템정보확인명령어_0420.md
+++ b/src/polytech/gwanjung/시스템정보확인명령어_0420.md
@@ -23,7 +23,7 @@ uname -a 명령어를 실행하면 시스템의 호스트명, 커널 버전, 시
   - system
   - baseboard
   - chassis
-- - processor
+  - processor
   - memory
   - cache
   - connector
