--- a/src/polytech/gwanjung/필수개념과명령어.md
+++ b/src/polytech/gwanjung/필수개념과명령어.md
@@ -110,10 +110,14 @@
 - dpkg -p 패키지이름 : 기존에 설치된 패키지 삭제 및 설정파일까지 모두 제거
 ### 조회
 - dpkg -l 패키지이름 -> 설치된 패키지에 대한 정보를 보여줌
-
+## dpkg 단점
+예전 리눅스의 프로그램 설치보다는 획기적으로 편리해지긴 했지만, dpkg 명령어는 의존성의 문제가 있다.
+예를 들어, 우분투의 기본 웹 브라우저인 Firfox는 X Window 상에서 가동된다.
+X Window가 설치되지 않은 상태에서 Firefox를 설치하면 Firefox는 X Window에 의존성이 있어, 설치가 되지 않는다.
+ 
 ## apt-get
 - apt-get 명령어는 dpkg 명령어의 패키지 의존성 문제를 완전히 해결해준다.
-
+- apt-get 명령어는 특정 패키지를 설치할 때, 의존성이 있는 패키지를 자동으로 먼저 설치해준다.
 ### apt-get 명령어
 ### 기본설치 방법
 - apt-get -y install 패키지이름
@@ -128,9 +132,38 @@
 ### 패키지 의존성 확인
 - apt-cache depends 패키지이름
 
-# 네트워크 관련 명령어
-중요한 네트워크 명령어만 정리
+# 네트워크 관련 설정 및 명령어
+중요한 네트워크 개념 및 명령어 정리
 
+## 네트워크 관련 필수 개념
+### TCP/IP
+- 컴퓨터끼리 네트워크상으로 의사소통을 하는 약속을 프로토콜이 라고 부르는데, 그 중 가장 널리 시용 
+되는 프로토콜의 종류 중 하나다.
+- 통신의 전송/수신을 다루는 TCP와 데이터 통신을 다루는 IP로 구성된다. 
+### Host Name 과 Domain Name
+- Host Name 은 각각의 컴퓨터에 지정된 이름을 의미한다.
+- Domain Name 은 babo.co.kr 과 같은 이런식으로 표현하고, kr 은 국가를 co는 회사를 babo는 회사명/단체명을 의미한다.
+### IP 주소
+- 네트워크에 연결된 모든 컴퓨터는 고유한 IP 가 있다.
+- 특정한 컴퓨터의 IP 주소를 알면, 그 컴퓨터가 전 세계 어디에 있는지 상관없이 네트워크에 접속이 가능하다.
+- 주의할 점은 사설 IP 주소는 이게 불가능하다는 것을 알아야 한다.
+![](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FV0WKi%2FbtqF8vNDo5A%2FeosjCmfCNst4bZaTRNL1nK%2Fimg.png)
+- Server IP 주소는 192.168.111.100 이고, 127.0.0.1은 모든 컴퓨터의 자기자신 (localhost) 를 의미한다.
+
+### 브로드캐스트 주소
+- 내부 네트워크의 모든 컴퓨터가 수신하는 주소를 말한다. C클래스인 경우라면 현재 주소의 제일 끝자리를 255로 바꾼 주소이다.
+![](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbJ2781%2FbtqGbp6ArdT%2FZPMjlAnJgDgMP5JufFoAq1%2Fimg.png)
+- 브로드캐스트 주소는 동일한 네트워크 주소를 가진 컴퓨터들이 다 들을 수 있는 스피커라고 생각하면 된다.
+### 게이트웨이
+- 네트워크 간 데이터를 전송하는 컴퓨터 또는 장비
+- VMware의 게이트웨이 주소는 192.168.111.2로 고정
+### 넷마스크 & 클래스
+: 네트워크의 규모를 결정 
+### DNS 서버주소
+- URL 을 해당 컴퓨터의 IP 주소로 변환해 주는 서버
+- 설정 파일은 /etc/resolv.conf
+- VMware를 사용하면 VMware가 192.168.111.2번을 게이트웨이 및 DNS 서버로, 192.168.111.254를 DHCP 서버로 설정함
+## 네트워크 관련 필수 명령어
 ### nm-connection-editor
 - 자동 IP 주소 또는 고정 IP 주소 사용 결정
 - IP 주소, 서브넷 마스크, 게이트웨이 정보 입력
