--- a/src/polytech/jeongmin/0426.md
+++ b/src/polytech/jeongmin/0426.md
@@ -23,7 +23,7 @@ layout: nslookup 명령어
 
 ### nslookup RR(Resource Record) type 종류
 - A > IP 주소를 알고 싶을 때
-- PRT > 특정 IP주소가 도메인과 일치하는지 알고 싶을 때
+- PTR > 특정 IP주소가 도메인과 일치하는지 알고 싶을 때
 - CNAME > 도메인과 별도로 별칭이 있는지 (원래 이름)
 - MX > 도메인으로 메일이 갈 때, 어떤 메일 서버가 수신하는지 
 - NS > 해당 도메인을 관리하는 도메인 서버가 누구인지
