마지막 수정

--- a/src/polytech/gwanjung/필수개념과명령어.md
+++ b/src/polytech/gwanjung/필수개념과명령어.md
@@ -1,4 +1,7 @@
- # 서버를 구축할 때 알아야 할 필수 개념과 명령어
+---
+layout: home
+---
+# 서버를 구축할 때 알아야 할 필수 개념과 명령어
 
 리눅스 운영 할 때 알아야 할 개념과 명령어에 대해 정리
 
@@ -22,7 +25,6 @@
 
 ### cd
 - Change Directory의 약자로 디렉터리를 이동하는 명령어.
-
 
 ### pwd
 - Print Working Directory의 약자로 현재 디렉터리의 전체 경로를 화면에 보여준다.
