마지막 수정

--- a/src/polytech/gwanjung/시스템정보확인명령어_0420.md
+++ b/src/polytech/gwanjung/시스템정보확인명령어_0420.md
@@ -11,9 +11,9 @@ layout: home
 
 #### uname : 현재 시스템의 커널 정보를 확인할 수 있는 명령어
 - uname 명령어와 출력결과
-uname -a 명령어를 실행하면 시스템의 호스트명, 커널 버전, 시스템 아키텍처 등의 정보를 확인할 수 있다.
-[ root@redhat ]# uname -a
-[현재 시스템의 커널 이름], [네트워크노드 호스트 이름], [리눅스 배포판 버전],
+- uname -a 명령어를 실행하면 시스템의 호스트명, 커널 버전, 시스템 아키텍처 등의 정보를 확인할 수 있다.
+- [ root@redhat ]# uname -a
+- [현재 시스템의 커널 이름], [네트워크노드 호스트 이름], [리눅스 배포판 버전],
 [리눅스 커널 버전], [시스템의 하드웨어 타입], [프로세스(CPU) 정보],
 [시스템의 하드웨어 플랫폼 정보]
 
