FIX : Fix HW5, HW6 img link

--- a/src/polytech/Yoonki/2023-04-24-NGINX.md
+++ b/src/polytech/Yoonki/2023-04-24-NGINX.md
@@ -2,7 +2,7 @@
 
 ## **Nginx란?**
 
-![ngnix.jpeg](NGINX%E1%84%85%E1%85%A1%E1%86%AB%206d5e0dcbbf8f436d8a5af3ec3ede8566/ngnix.jpeg)
+![nginx.jpeg](./img/nginx.jpeg)
 
 - 높은 성능과 안정성을 갖는 오픈소스 웹 서버 소프트웨어
 - 초기에는 웹 서버로 사용되었으나, 지금은 프록시, 리버스 프록시, 메일 프록시, 캐시 서버, 로드 밸런서, HTTP 캐시 등 다양한 용도로 사용
