--- a/src/polytech/jeongmin/0418.md
+++ b/src/polytech/jeongmin/0418.md
@@ -24,7 +24,8 @@ layout: Memory
 
 ## 스택 vs 힙
 - 스택은 정적 메모리를 힙은 동적 메모리가 저장되는 영역입니다.
-- 스택은 함수,지역변수,매개변수가 저장되며 LIFO 방식으로 관리되지만 힙 영역은 전역 변수를 다루며 사용자가 직접 관리해야 하는 메모리 영역입니다.
+- 스택(Stack) 영역은 함수 호출과 관련된 지역 변수, 매개 변수, 반환 주소 등을 저장하는 데 사용됩니다. 이 영역은 LIFO(Last-In-First-Out) 방식으로 관리되며, 함수 호출 시 생성되는 지역 변수와 매개 변수 등의 데이터를 저장합니다. 함수 호출이 끝나면 해당 함수에 할당된 메모리는 스택에서 제거됩니다.
+- 힙(Heap) 영역은 동적으로 할당되는 데이터를 저장하는 데 사용됩니다. 이 영역은 전역 변수, 정적 변수, 클래스 멤버 변수 등을 저장하는 데 사용될 수 있으며, 사용자가 직접 할당하고 해제할 수 있는 메모리 영역입니다.
 
 ## 데이터(data) 영역
 - 메모리의 데이터(data) 영역은 프로그램의 전역 변수와 정적(static) 변수가 저장되는 영역입니다.
