--- a/src/polytech/taegeun/230421_day_5.md
+++ b/src/polytech/taegeun/230421_day_5.md
@@ -1,3 +1,7 @@
+---
+layout: home
+---
+
 # IP
 
 Ip란 Internet Protocol의 약자로 컴퓨터 네트워크에서 각 컴퓨터를 식별하는데 사용되는 고유한 주소이다. IPv4는 4개의 8비트 숫자로 구성되어 있으며 구성된 네트워크의 주소와 호스트 주소로 나누어서 표현한다. 
