--- a/src/polytech/taegeun/230426_day_8.md
+++ b/src/polytech/taegeun/230426_day_8.md
@@ -1,3 +1,7 @@
+---
+layout: home
+---
+
 # 로드 밸런싱 (Load Balancing)
 
 로드 밸런싱은 Scale-out을 하거나 하려고 하는 서비스에서 필수적인 요소로서 여러 대의 서버에게 균등하게 트래픽을 분산시켜주는 기술이다. 이는 서버 부하를 분산시켜 서버의 안정성과 가용성을 높여주며, 사용자에게 빠르고 안정적인 서비스 제공을 가능하게 한다. 
