--- a/src/polytech/yulim/230419_nano.md
+++ b/src/polytech/yulim/230419_nano.md
@@ -31,7 +31,7 @@ nano --version
 
 <hr>
 
-# Ubuntu 및 Debian에 Nano를 설치
+# Ubuntu Nano 설치
 
 ```python
 sudo apt install nano
@@ -41,7 +41,7 @@ sudo apt install nano
 
 <hr>
 
-# CentOS 및 Fedora에 Nano를 설치
+# CentOS 및 Rocky Nano 설치
 
 ```python
 sudo yum install nano
