fix: Day9에 . 추가 충돌 해결 시도

--- a/src/polytech/taehwan/2023-04-27-Day9-네트워크-주소,브로드캐스트-주소,서브넷.md
+++ b/src/polytech/taehwan/2023-04-27-Day9-네트워크-주소,브로드캐스트-주소,서브넷.md
@@ -56,5 +56,5 @@ IP 주소를 서브넷팅하면
 
 - 어디까지가 네트워크 ID고 어디부터가 호스트 ID인지 판단하기가 어려울 때가 있는데, 이 때 **서브넷 마스크**라는 값을 사용한다.
 
-> 서브넷 마스크: 네트워크 ID와 호스트 ID를 식별하기 위한 값이다
+> 서브넷 마스크: 네트워크 ID와 호스트 ID를 식별하기 위한 값이다.
 >
