--- a/src/polytech/jeongmin/0428.md
+++ b/src/polytech/jeongmin/0428.md
@@ -70,4 +70,4 @@ layout: home
 
 ### 6.스키마(schema)
 - 스키마는 테이블을 디자인하기 위한 청사진이라고 할 수 있습니다.
-- 이러한 스키마는 테이블의 각 열에 대한 항목과 타입뿐만 아니라 기본 키와 외래 키도 나타내야 합니다.
+- 이러한 스키마는 테이블의 각 열에 대한 항목과 타입뿐만 아니라 기본 키와 외래 키도 나타내야 합니다
