--- a/src/polytech/ParkTaeHyeon/(주말과제)커맨드라인 완벽분석.md
+++ b/src/polytech/ParkTaeHyeon/(주말과제)커맨드라인 완벽분석.md
@@ -1,3 +1,7 @@
+---
+layout: home
+---
+
 # 주말과제_커맨드라인 완벽분석
 
 # 흐름제어
@@ -30,19 +34,19 @@ fl
 
 ### 파일 표현식
 
-![Untitled](%E1%84%8C%E1%85%AE%E1%84%86%E1%85%A1%E1%86%AF%E1%84%80%E1%85%AA%E1%84%8C%E1%85%A6_%E1%84%8F%E1%85%A5%E1%84%86%E1%85%A2%E1%86%AB%E1%84%83%E1%85%B3%E1%84%85%E1%85%A1%E1%84%8B%E1%85%B5%E1%86%AB%20%E1%84%8B%E1%85%AA%E1%86%AB%E1%84%87%E1%85%A7%E1%86%A8%E1%84%87%E1%85%AE%E1%86%AB%E1%84%89%E1%85%A5%E1%86%A8%205c877088fa1040d98cab0a3f4d59c1d7/Untitled.png)
+![Untitled](./image/Untitled12%20(1).png)
 
 ### 문자열 표현식
 
 - 문자열을 검사하는 표현식은 다음과 같다.
 
-![Untitled](%E1%84%8C%E1%85%AE%E1%84%86%E1%85%A1%E1%86%AF%E1%84%80%E1%85%AA%E1%84%8C%E1%85%A6_%E1%84%8F%E1%85%A5%E1%84%86%E1%85%A2%E1%86%AB%E1%84%83%E1%85%B3%E1%84%85%E1%85%A1%E1%84%8B%E1%85%B5%E1%86%AB%20%E1%84%8B%E1%85%AA%E1%86%AB%E1%84%87%E1%85%A7%E1%86%A8%E1%84%87%E1%85%AE%E1%86%AB%E1%84%89%E1%85%A5%E1%86%A8%205c877088fa1040d98cab0a3f4d59c1d7/Untitled%201.png)
+![Untitled](./image/Untitled12%20(2).png)
 
 ### 정수 표현식
 
 - 정수를 검사하는 표현식은 다음과 같다.
 
-![Untitled](%E1%84%8C%E1%85%AE%E1%84%86%E1%85%A1%E1%86%AF%E1%84%80%E1%85%AA%E1%84%8C%E1%85%A6_%E1%84%8F%E1%85%A5%E1%84%86%E1%85%A2%E1%86%AB%E1%84%83%E1%85%B3%E1%84%85%E1%85%A1%E1%84%8B%E1%85%B5%E1%86%AB%20%E1%84%8B%E1%85%AA%E1%86%AB%E1%84%87%E1%85%A7%E1%86%A8%E1%84%87%E1%85%AE%E1%86%AB%E1%84%89%E1%85%A5%E1%86%A8%205c877088fa1040d98cab0a3f4d59c1d7/Untitled%202.png)
+![Untitled](./image/Untitled12%20(3).png)
 
 ### 현대식 테스트
 
@@ -55,6 +59,6 @@ fl
 - 논리 연산자를 이용하여 조합이 가능하다.
 - `[[ ]]` 은 세 가지 논리 연산을 지원한다.
 
-![Untitled](%E1%84%8C%E1%85%AE%E1%84%86%E1%85%A1%E1%86%AF%E1%84%80%E1%85%AA%E1%84%8C%E1%85%A6_%E1%84%8F%E1%85%A5%E1%84%86%E1%85%A2%E1%86%AB%E1%84%83%E1%85%B3%E1%84%85%E1%85%A1%E1%84%8B%E1%85%B5%E1%86%AB%20%E1%84%8B%E1%85%AA%E1%86%AB%E1%84%87%E1%85%A7%E1%86%A8%E1%84%87%E1%85%AE%E1%86%AB%E1%84%89%E1%85%A5%E1%86%A8%205c877088fa1040d98cab0a3f4d59c1d7/Untitled%203.png)
+![Untitled](./image/Untitled12%20(4).png)
 
 ###
