--- a/src/polytech/ParkTaeHyeon/(주말과제)네임 서버 설치와 운영.md
+++ b/src/polytech/ParkTaeHyeon/(주말과제)네임 서버 설치와 운영.md
@@ -1,3 +1,8 @@
+---
+layout: home
+---
+
+
 # 주말과제_네임 서버 설치와 운영
 
 # 네임 서버
@@ -7,7 +12,7 @@
 - 또한 이 과정을 해석이라고 한다.
 - 각 URL과 IP를 기록해둔 파일을 hosts이라고 한다. 전화번호부와 같은 역할을 하는 것이다.
 
-![Untitled](%E1%84%8C%E1%85%AE%E1%84%86%E1%85%A1%E1%86%AF%E1%84%80%E1%85%AA%E1%84%8C%E1%85%A6_%E1%84%82%E1%85%A6%E1%84%8B%E1%85%B5%E1%86%B7%20%E1%84%89%E1%85%A5%E1%84%87%E1%85%A5%20%E1%84%89%E1%85%A5%E1%86%AF%E1%84%8E%E1%85%B5%E1%84%8B%E1%85%AA%20%E1%84%8B%E1%85%AE%E1%86%AB%E1%84%8B%E1%85%A7%E1%86%BC%20891d383b826f4382985f6b550807ba26/Untitled.png)
+![Untitled](./image/Untitled%201_V%20(1).png)
 
 - 하지만 이런 경우 새로 생긴 전화번호나 변경 번호를 실시간으로 확인할 수 없다. 또한 전 세계의 모든 전화번호부에 넣을 수는 없다.
 - 따라서 해석을 전문으로 해주는 서버 컴퓨터가 필요해졌고, 이를 네임 서버 또는 DNS 서버라고 부르게 되었다.
@@ -15,7 +20,7 @@
 
 # IP 주소를 얻는 내부 흐름도
 
-![Untitled](%E1%84%8C%E1%85%AE%E1%84%86%E1%85%A1%E1%86%AF%E1%84%80%E1%85%AA%E1%84%8C%E1%85%A6_%E1%84%82%E1%85%A6%E1%84%8B%E1%85%B5%E1%86%B7%20%E1%84%89%E1%85%A5%E1%84%87%E1%85%A5%20%E1%84%89%E1%85%A5%E1%86%AF%E1%84%8E%E1%85%B5%E1%84%8B%E1%85%AA%20%E1%84%8B%E1%85%AE%E1%86%AB%E1%84%8B%E1%85%A7%E1%86%BC%20891d383b826f4382985f6b550807ba26/Untitled%201.png)
+![Untitled](./image/Untitled%201_V%20(2).png)
 
 1. 사용자가 웹 브라우저 등에서 URL을 입력한다.
 2. /etc/host.conf 파일을 조회해 우선순위가 무엇인지를 확인한다.
@@ -35,7 +40,7 @@
 - 그러다가 인터넷을 사용하는 컴퓨터가 기하급수적으로 늘어나게 되었고 도저히 관리할 수 없게 되었다. 그래서 태어난 것이 아래와 같은 트리 구조이다.
 - 이를 활용하면 하위 네임 서버만 관리하면 된다.
 
-![Untitled](%E1%84%8C%E1%85%AE%E1%84%86%E1%85%A1%E1%86%AF%E1%84%80%E1%85%AA%E1%84%8C%E1%85%A6_%E1%84%82%E1%85%A6%E1%84%8B%E1%85%B5%E1%86%B7%20%E1%84%89%E1%85%A5%E1%84%87%E1%85%A5%20%E1%84%89%E1%85%A5%E1%86%AF%E1%84%8E%E1%85%B5%E1%84%8B%E1%85%AA%20%E1%84%8B%E1%85%AE%E1%86%AB%E1%84%8B%E1%85%A7%E1%86%BC%20891d383b826f4382985f6b550807ba26/Untitled%202.png)
+![Untitled](./image/Untitled%201_V%20(3).png)
 
 - www.nate.com는 도메인 이름이 아닌 컴퓨터이고 nate.com가 도메인 이름이다.
 
