--- a/src/polytech/jeongmin/0420.md
+++ b/src/polytech/jeongmin/0420.md
@@ -10,7 +10,7 @@ layout: home
 ![](./img/permission.png)
 ### -> 앞 부분의 root가 소유자, 뒤의 root가 소유그룹이다.
 
-## chwown - 사용자 및 그룹 소유권 변경
+## chown - 사용자 및 그룹 소유권 변경
 - chown [options] owner:[group] files
 
 ### test.txt 파일을 소유자를 root로
